# mlspaceship

./: .gitignore  README.md  model.py  notebook.ipynb  submission.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: results.csv
data/model/: trained_model.pkl
package/: pyproject.toml
spaceshiptitanicHITS/: README.md  pyproject.toml
spaceshiptitanicHITS/spaceshiptitanichits/: module.py
