[tool.poetry]
name = "spaceshiptitanichits"
version = "0.1.0"
description = ""
authors = ["smilole <levkar787@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
optuna = "^3.5.0"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
catboost = "^1.2.3"
joblib = "^1.3.2"
numpy = "^1.26.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
